compiler/tests/snapshots/parser__parser_from_path@04_var_decl.bakugo.snap
---
source: tests/parser.rs
expression: parsed
input_file: tests/examples/ast_error/04_var_decl.bakugo
---
pos:
  - 0
  - 101
pairs:
  - pos:
      - 0
      - 101
    rule: SourceFile
    inner:
      pos:
        - 0
        - 101
      pairs:
        - pos:
            - 0
            - 99
          rule: TopLevelDecl
          inner:
            pos:
              - 0
              - 99
            pairs:
              - pos:
                  - 0
                  - 99
                rule: FunctionDecl
                inner:
                  pos:
                    - 5
                    - 97
                  pairs:
                    - pos:
                        - 5
                        - 8
                      rule: Ident
                      inner: abc
                    - pos:
                        - 8
                        - 11
                      rule: Signature
                      inner:
                        pos:
                          - 8
                          - 10
                        pairs:
                          - pos:
                              - 8
                              - 10
                            rule: Parameters
                            inner: ()
                    - pos:
                        - 17
                        - 97
                      rule: StatementList
                      inner:
                        pos:
                          - 17
                          - 97
                        pairs:
                          - pos:
                              - 17
                              - 27
                            rule: Declaration
                            inner:
                              pos:
                                - 17
                                - 27
                              pairs:
                                - pos:
                                    - 17
                                    - 27
                                  rule: VarDecl
                                  inner:
                                    pos:
                                      - 21
                                      - 27
                                    pairs:
                                      - pos:
                                          - 21
                                          - 27
                                        rule: VarSpec
                                        inner:
                                          pos:
                                            - 21
                                            - 27
                                          pairs:
                                            - pos:
                                                - 21
                                                - 23
                                              rule: IdentifierList
                                              inner:
                                                pos:
                                                  - 21
                                                  - 22
                                                pairs:
                                                  - pos:
                                                      - 21
                                                      - 22
                                                    rule: Ident
                                                    inner: a
                                            - pos:
                                                - 25
                                                - 27
                                              rule: ExpressionList
                                              inner:
                                                pos:
                                                  - 25
                                                  - 27
                                                pairs:
                                                  - pos:
                                                      - 25
                                                      - 27
                                                    rule: IntLit
                                                    inner: "10"
                          - pos:
                              - 27
                              - 28
                            rule: Semicolon
                            inner: ;
                          - pos:
                              - 33
                              - 96
                            rule: Declaration
                            inner:
                              pos:
                                - 33
                                - 96
                              pairs:
                                - pos:
                                    - 33
                                    - 96
                                  rule: VarDecl
                                  inner:
                                    pos:
                                      - 47
                                      - 90
                                    pairs:
                                      - pos:
                                          - 47
                                          - 57
                                        rule: VarSpec
                                        inner:
                                          pos:
                                            - 47
                                            - 57
                                          pairs:
                                            - pos:
                                                - 47
                                                - 49
                                              rule: IdentifierList
                                              inner:
                                                pos:
                                                  - 47
                                                  - 48
                                                pairs:
                                                  - pos:
                                                      - 47
                                                      - 48
                                                    rule: Ident
                                                    inner: c
                                            - pos:
                                                - 49
                                                - 52
                                              rule: Type
                                              inner:
                                                pos:
                                                  - 49
                                                  - 52
                                                pairs:
                                                  - pos:
                                                      - 49
                                                      - 52
                                                    rule: Ident
                                                    inner: int
                                            - pos:
                                                - 55
                                                - 57
                                              rule: ExpressionList
                                              inner:
                                                pos:
                                                  - 55
                                                  - 57
                                                pairs:
                                                  - pos:
                                                      - 55
                                                      - 57
                                                    rule: IntLit
                                                    inner: "20"
                                      - pos:
                                          - 57
                                          - 58
                                        rule: Semicolon
                                        inner: ;
                                      - pos:
                                          - 61
                                          - 89
                                        rule: VarSpec
                                        inner:
                                          pos:
                                            - 61
                                            - 89
                                          pairs:
                                            - pos:
                                                - 61
                                                - 68
                                              rule: IdentifierList
                                              inner:
                                                pos:
                                                  - 61
                                                  - 68
                                                pairs:
                                                  - pos:
                                                      - 61
                                                      - 62
                                                    rule: Ident
                                                    inner: i
                                                  - pos:
                                                      - 64
                                                      - 65
                                                    rule: Ident
                                                    inner: j
                                                  - pos:
                                                      - 67
                                                      - 68
                                                    rule: Ident
                                                    inner: k
                                            - pos:
                                                - 69
                                                - 72
                                              rule: Type
                                              inner:
                                                pos:
                                                  - 69
                                                  - 72
                                                pairs:
                                                  - pos:
                                                      - 69
                                                      - 72
                                                    rule: Ident
                                                    inner: int
                                            - pos:
                                                - 75
                                                - 89
                                              rule: ExpressionList
                                              inner:
                                                pos:
                                                  - 75
                                                  - 89
                                                pairs:
                                                  - pos:
                                                      - 75
                                                      - 77
                                                    rule: IntLit
                                                    inner: "10"
                                                  - pos:
                                                      - 77
                                                      - 78
                                                    rule: Comma
                                                    inner: ","
                                                  - pos:
                                                      - 79
                                                      - 81
                                                    rule: IntLit
                                                    inner: "20"
                                                  - pos:
                                                      - 81
                                                      - 82
                                                    rule: Comma
                                                    inner: ","
                                                  - pos:
                                                      - 83
                                                      - 85
                                                    rule: IntLit
                                                    inner: "30"
                                                  - pos:
                                                      - 85
                                                      - 86
                                                    rule: Comma
                                                    inner: ","
                                                  - pos:
                                                      - 87
                                                      - 89
                                                    rule: IntLit
                                                    inner: "40"
                                      - pos:
                                          - 89
                                          - 90
                                        rule: Semicolon
                                        inner: ;
                          - pos:
                              - 96
                              - 97
                            rule: Semicolon
                            inner: ;
        - pos:
            - 99
            - 100
          rule: Semicolon
          inner: ;
        - pos:
            - 101
            - 101
          rule: EOI
          inner: ""

